// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment editor fixed toolbar styles platform_editor_comments_border_radius is off border radius disabled should render sticky toolbar with correct styles 1`] = `
".css-lqr7a-FixedToolbar{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);border-radius:var(--ds-radius-small, 3px) var(--ds-radius-small, 3px) 0 0;}
.css-lqr7a-FixedToolbar >div{}
.css-lqr7a-FixedToolbar >div >div:first-of-type:not(style),.css-lqr7a-FixedToolbar >div >style:first-of-type+*{margin-left:0;}
.css-lqr7a-FixedToolbar .block-type-btn{padding-left:0;}
.css-lqr7a-FixedToolbar span svg{max-width:100%;}
.css-1pi966g-FixedToolbar{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);}
.css-1pi966g-FixedToolbar >div{}
.css-1pi966g-FixedToolbar >div >div:first-of-type:not(style),.css-1pi966g-FixedToolbar >div >style:first-of-type+*{margin-left:0;}
.css-1pi966g-FixedToolbar .block-type-btn{padding-left:0;}
.css-1pi966g-FixedToolbar>div{}
@media (max-width: 490px){.css-1pi966g-FixedToolbar>div{-webkit-flex-direction:column-reverse;-ms-flex-direction:column-reverse;flex-direction:column-reverse;-webkit-align-items:end;-webkit-box-align:end;-ms-flex-align:end;align-items:end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;}}
.css-1pi966g-FixedToolbar>div >div:first-of-type{}
@media (max-width: 490px){.css-1pi966g-FixedToolbar>div >div:first-of-type >div:nth-of-type(2){-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}}
.css-1pi966g-FixedToolbar span svg{max-width:100%;}"
`;

exports[`comment editor fixed toolbar styles platform_editor_comments_border_radius is on border radius enabled should render sticky toolbar with border radius styles 1`] = `
".css-lqr7a-FixedToolbar{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);border-radius:var(--ds-radius-small, 3px) var(--ds-radius-small, 3px) 0 0;}
.css-lqr7a-FixedToolbar >div{}
.css-lqr7a-FixedToolbar >div >div:first-of-type:not(style),.css-lqr7a-FixedToolbar >div >style:first-of-type+*{margin-left:0;}
.css-lqr7a-FixedToolbar .block-type-btn{padding-left:0;}
.css-lqr7a-FixedToolbar span svg{max-width:100%;}
.css-1pi966g-FixedToolbar{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);}
.css-1pi966g-FixedToolbar >div{}
.css-1pi966g-FixedToolbar >div >div:first-of-type:not(style),.css-1pi966g-FixedToolbar >div >style:first-of-type+*{margin-left:0;}
.css-1pi966g-FixedToolbar .block-type-btn{padding-left:0;}
.css-1pi966g-FixedToolbar>div{}
@media (max-width: 490px){.css-1pi966g-FixedToolbar>div{-webkit-flex-direction:column-reverse;-ms-flex-direction:column-reverse;flex-direction:column-reverse;-webkit-align-items:end;-webkit-box-align:end;-ms-flex-align:end;align-items:end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;}}
.css-1pi966g-FixedToolbar>div >div:first-of-type{}
@media (max-width: 490px){.css-1pi966g-FixedToolbar>div >div:first-of-type >div:nth-of-type(2){-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}}
.css-1pi966g-FixedToolbar span svg{max-width:100%;}
.css-o9mitm-FixedToolbar{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);border-radius:var(--ds-radius-small, 3px) var(--ds-radius-small, 3px) 0 0;}
.css-o9mitm-FixedToolbar >div{}
.css-o9mitm-FixedToolbar >div >div:first-of-type:not(style),.css-o9mitm-FixedToolbar >div >style:first-of-type+*{margin-left:0;}
.css-o9mitm-FixedToolbar .block-type-btn{padding-left:0;}
.css-o9mitm-FixedToolbar>div{}
@media (max-width: 490px){.css-o9mitm-FixedToolbar>div{-webkit-flex-direction:column-reverse;-ms-flex-direction:column-reverse;flex-direction:column-reverse;-webkit-align-items:end;-webkit-box-align:end;-ms-flex-align:end;align-items:end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;}}
.css-o9mitm-FixedToolbar>div >div:first-of-type{}
@media (max-width: 490px){.css-o9mitm-FixedToolbar>div >div:first-of-type >div:nth-of-type(2){-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}}
.css-o9mitm-FixedToolbar span svg{max-width:100%;}"
`;

exports[`comment editor sticky toolbar styles should render sticky toolbar with correct styles 1`] = `
".css-18uxv4d-StickyToolbar{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);position:-webkit-sticky;position:sticky;padding-bottom:var(--ds-space-100, 8px);z-index:500;-webkit-transition:box-shadow ease-in-out 0.2s;transition:box-shadow ease-in-out 0.2s;border-radius:var(--ds-radius-small, 3px) var(--ds-radius-small, 3px) 0 0;}
.css-18uxv4d-StickyToolbar >div{}
.css-18uxv4d-StickyToolbar >div >div:first-of-type:not(style),.css-18uxv4d-StickyToolbar >div >style:first-of-type+*{margin-left:0;}
.css-18uxv4d-StickyToolbar .block-type-btn{padding-left:0;}
.css-18uxv4d-StickyToolbar>div{}
@media (max-width: 490px){.css-18uxv4d-StickyToolbar>div{-webkit-flex-direction:column-reverse;-ms-flex-direction:column-reverse;flex-direction:column-reverse;-webkit-align-items:end;-webkit-box-align:end;-ms-flex-align:end;align-items:end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;}}
.css-18uxv4d-StickyToolbar>div >div:first-of-type{}
@media (max-width: 490px){.css-18uxv4d-StickyToolbar>div >div:first-of-type >div:nth-of-type(2){-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}}
.css-18uxv4d-StickyToolbar span svg{max-width:100%;}
.css-18uxv4d-StickyToolbar.show-keyline{box-shadow:0 2px 0 0 var(--ds-background-accent-gray-subtlest, #F0F1F2);}"
`;
